--- a/index.html
+++ b/index.html
@@ -33,13 +33,23 @@
             border: 1px solid #00796b;
             border-radius: 5px;
             background-color: #b2dfdb;
+            transition: background-color 0.3s;
+        }
+
+        .fact:hover {
+            background-color: #80cbc4; /* Change background color on hover */
+        }
+
+        ul {
+            list-style-type: disc; /* Use bullet points */
+            padding-left: 20px; /* Indent the list */
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Interesting Facts About Earth</h1>
-        <div id="facts-container"></div>
+        <ul id="facts-container"></ul> <!-- Changed to an unordered list -->
     </div>
     <script>
         const facts = [
@@ -88,10 +98,10 @@
         function displayFacts() {
             const factsContainer = document.getElementById('facts-container');
             facts.forEach(fact => {
-                const factDiv = document.createElement('div');
-                factDiv.className = 'fact';
-                factDiv.innerHTML = `<strong>${fact.fact}</strong><p>${fact.description}</p>`;
-                factsContainer.appendChild(factDiv);
+                const factLi = document.createElement('li'); // Create a list item
+                factLi.className = 'fact';
+                factLi.innerHTML = `<strong>${fact.fact}</strong>: ${fact.description}`; // Include the description
+                factsContainer.appendChild(factLi);
             });
         }
 
